# thumb_generator

./: CMakeLists.txt  main.cpp
MultithreadResizer/: CMakeLists.txt  MResizer.cpp  MResizer.hpp
ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp  Worker.cpp  Worker.hpp
